# esp32s3-edge-ai

./: .gitignore  Bao cao du an phat hien doi tuong chuyen dong.docx  BÁO CÁO DỰ ÁN - Nguyễn Văn Mạnh.docx  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old  ~$O CÁO DỰ ÁN - Nguyễn Văn Mạnh.docx
main/: CMakeLists.txt  idf_component.yml  image_utils.c  image_utils.h  main.c  main.cpp
main/person_ai/: ai_person.cc  ai_person.h
my_components/esp32_camera_driver/: CMakeLists.txt  README.md  esp32_camera_driver.c
my_components/esp32_camera_driver/include/: esp32_camera_driver.h
my_components/http_stream/: CMakeLists.txt  README.md  http_stream.c
my_components/http_stream/include/: http_stream.h
my_components/oled_driver/: CMakeLists.txt  oled_ssd1306.c
my_components/oled_driver/include/: font5x7.h  oled_ssd1306.h
my_components/ota_server/: CMakeLists.txt  ota_server.c
my_components/ota_server/include/: ota_server.h
my_components/wifi_manager/: CMakeLists.txt  Kconfig  README.md  wifi_manager.c
my_components/wifi_manager/include/: wifi_manager.h
